--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg text-center px-2 mb-5">
-      <a class="navbar-brand text-center" href="#">Covid 19</a>
+    <nav class="navbar navbar-expand-lg navbar-dark  px-2 mb-5">
+      <a class="navbar-brand" href="#">Covid 19</a>
     </nav>
 
     <div class="container">
@@ -41,7 +41,7 @@
           <div class="col-sm-12">
             <div class="card w-100">
               <div class="card-body">
-                <h5 class="card-title text-center">Data Kasus Covid 19</h5>
+                <h5 class="card-title text-white">Data Kasus Covid 19</h5>
                 <ul
                   style="
                     list-style-type: circle;
@@ -199,7 +199,6 @@
             method: 'GET',
             headers: {
               'X-RapidAPI-Key':
-              '',
               'X-RapidAPI-Host': 'covid-193.p.rapidapi.com',
             },
           };
